# mes-bot

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_UAT.md  TESTING.md  TEST_EXECUTION_REPORT.md  USER_GUIDE.md  docker-compose.yml  mes_bot.db  plan.md  pyproject.toml  pytest-uat.ini  pytest.ini  requirements.txt  test_uat.db  test_ui_manually.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml  uat-tests.yml
app/: __init__.py  backtester.py  base_strategy.py  bot.py  circuit_breaker.py  config.py  decision_engine.py  enhanced_strategy.py  feature_pipeline.py  ib_client.py  ib_connection_manager.py  instruments.py  logging_service.py  market_indicators.py  ml_ensemble.py  ml_training.py  model_automation.py  model_versioning.py  models.py  monitoring.py  notification_service.py  parameter_optimizer.py  risk_alerts.py  risk_analytics.py  risk_manager.py  risk_predictor.py  strategy.py  synthetic_data_generator.py  technical_indicators.py  ui.py
app/data_providers/: __init__.py  vix_provider.py
app/models/: risk_models.py
config/: model_automation.yaml
deploy/: setup-ubuntu.sh
deploy/systemd/: lotto-grid-bot.service
docs/: API_REFERENCE.md  CONFIG_REFERENCE.md  connection_resilience_implementation.md
game-theory/backend/: .env.example  Dockerfile  alembic.ini  config.py  main.py  requirements.txt
game-theory/backend/alembic/: env.py
game-theory/backend/api/: auth.py  gto.py  payments.py  simulation.py
game-theory/backend/database/: connection.py
game-theory/backend/middleware/: security.py
game-theory/backend/models/: gto_analysis.py  usage.py  user.py
game-theory/backend/schemas/: gto.py  simulation.py  user.py
game-theory/backend/services/: auth.py  gto_chat_service.py  gto_engine.py  market_data_service.py  openai_service.py  stripe_service.py  usage_service.py
game-theory/backend/utils/: validators.py
lotto_grid_bot/: .gitignore  README_UAT.md  docker-compose.yml  pyproject.toml  pytest-uat.ini  pytest.ini
lotto_grid_bot/.github/workflows/: ci.yml  release.yml  security.yml
lotto_grid_bot/app/: bot.py  ib_client.py  models.py
lotto_grid_bot/data/: lotto_grid.db
lotto_grid_bot/models/: exit_model_random_forest_20240131.joblib
lotto_grid_bot/tests/: test_decision_engine.py  test_market_indicators.py  test_ml_pipeline_e2e.py  test_performance_load.py  test_risk_manager.py
lotto_grid_bot/tests/uat/: test_backtest.py  test_configuration.py  test_dashboard_ui.py  test_performance.py
models/: entry_model_random_forest_20240131.joblib  entry_model_random_forest_20250712.joblib  entry_model_random_forest_20250713.joblib  entry_model_random_forest_20250714.joblib  exit_model_random_forest_20250712.joblib  exit_model_random_forest_20250713.joblib  exit_model_random_forest_20250714.joblib  strike_model_random_forest_20240131.joblib  strike_model_random_forest_20250712.joblib  strike_model_random_forest_20250713.joblib
scripts/: generate_training_data.py  model_automation_service.py  run_uat_tests.sh  test_connection_resilience_live.py  train_ml_models.py
spoil-sports/: CHANGELOG.md  README.md  package-lock.json  package.json
spoil-sports/src/utils/: supabase.ts
tests/: __init__.py  conftest.py  test_backtester.py  test_backtester_edge_cases.py  test_backtester_integration.py  test_config.py  test_config_extended.py  test_connection_resilience.py  test_contract_rollover.py  test_database_schema.py  test_decision_engine.py  test_enhanced_strategy.py  test_feature_pipeline.py  test_instruments.py  test_logging_service.py  test_market_indicators.py  test_ml_ensemble.py  test_ml_pipeline_e2e.py  test_ml_training.py  test_model_automation.py  test_monitoring.py  test_notification_system.py  test_parameter_optimizer.py  test_performance_load.py  test_risk_manager.py  test_strategy.py  test_strategy_error_handling.py  test_strategy_extended.py  test_synthetic_data_generator.py  test_technical_indicators.py  test_uat_ml_dashboard.py  test_vix_provider.py
tests/uat/: README.md  __init__.py  conftest.py  test_backtest.py  test_configuration.py  test_dashboard_ui.py  test_live_monitor.py  test_manual_trading.py  test_performance.py  test_trading_controls.py
tests/uat/helpers/: __init__.py  dashboard_pages.py  test_data.py
tone-smith/backend/: index.js  package-lock.json  package.json
tone-smith/backend/controllers/: transformController.js
tone-smith/backend/routes/: transformRoutes.js
